# http-server

./: .gitignore  Cargo.toml  LICENSE.md  README.md  default.nix  flake.nix  index.html  shell.nix
.github/workflows/: rust.yml
src/: argsparser.rs  h_res.rs  htmlgenerator.rs  integrationtest.rs  lib.rs  main.rs  req.rs
tests/: integration_test.rs
